# Blackstone

./: .gitignore  README.md  description.txt
1-to-file/: app.cpp  main.cpp  (+4 more)
bank_crypto_project/: CMakeLists.txt  desc-found.md
bank_crypto_project/examples/: example_basic.cpp
bank_crypto_project/include/bank/: bank_aes.h  bank_chacha20.h  bank_config.h  bank_crypto.h  bank_envelope.h  bank_gcm.h  bank_hkdf.h  bank_hmac.h  bank_log.h  bank_memory.h  bank_pbkdf2.h  bank_platform.h  bank_poly1305.h  bank_rng.h  bank_session.h  bank_sha.h  bank_transaction.h  bank_types.h  bank_utils.h
bank_crypto_project/include/bank/internal/: bank_memory.h
bank_crypto_project/scripts/: build.bat  build.sh  clean.sh
bank_crypto_project/src/: main.cpp
bank_crypto_project/src/aes/: bank_aes_core.cpp  bank_aes_tables.cpp
bank_crypto_project/src/chacha20/: bank_chacha20_core.cpp  bank_chacha20_encrypt.cpp
bank_crypto_project/src/core/: bank_context.cpp  bank_crypto.cpp  bank_init.cpp
bank_crypto_project/src/envelope/: bank_envelope_create.cpp  bank_envelope_extract.cpp
bank_crypto_project/src/gcm/: bank_gcm_decrypt.cpp  bank_gcm_encrypt.cpp  bank_ghash.cpp
bank_crypto_project/src/hmac/: bank_hmac_sha256.cpp
bank_crypto_project/src/kdf/: bank_hkdf.cpp  bank_pbkdf2.cpp
bank_crypto_project/src/platform/: bank_platform_unix.cpp  bank_platform_win.cpp
bank_crypto_project/src/poly1305/: bank_poly1305_core.cpp
bank_crypto_project/src/rng/: bank_rng_entropy.cpp  bank_rng_init.cpp  bank_rng_random.cpp
bank_crypto_project/src/session/: bank_session_create.cpp  bank_session_destroy.cpp  bank_session_get.cpp
bank_crypto_project/src/sha/: bank_sha256.cpp  bank_sha512.cpp
bank_crypto_project/src/test/: bank_self_test.cpp
bank_crypto_project/src/transaction/: bank_transaction_create.cpp  bank_transaction_verify.cpp
bank_crypto_project/src/utils/: bank_crc32.cpp  bank_log.cpp  bank_utils.cpp
bank_crypto_project/tests/performance/: bench_aes.cpp  bench_sha.cpp
bank_crypto_project/tests/unit/: main_test.cpp  test_aes.cpp  test_chacha.cpp  test_envelope.cpp  test_gcm.cpp  test_hkdf.cpp  test_hmac.cpp  test_pbkdf2.cpp  test_poly1305.cpp  test_rng.cpp  test_session.cpp  test_sha.cpp  test_transaction.cpp  test_utils.cpp
token/p2p_token_system/: CMakeLists.txt
token/p2p_token_system/src/: main.c
token/p2p_token_system/src/balance/: balance_cache.c  balance_cache.h
token/p2p_token_system/src/blockchain/: blockchain.c  blockchain.h
token/p2p_token_system/src/common/: types.h
token/p2p_token_system/src/consensus/: consensus.c  consensus.h
(+197 files in other folders)
